frame/support/test/tests/pallet_ui/storage_multiple_pov_estimate.stderr
error: Invalid attribute: Duplicate attribute
  --> tests/pallet_ui/storage_multiple_pov_estimate.rs:16:3
   |
16 |     #[pallet::pov_estimate = MaxEncodedLen]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
